# ClashKingAPI

./: .gitignore  DASHBOARD_ENDPOINTS.md  Dockerfile  ENDPOINTS_ANALYSIS.md  REFACTORING_GUIDE.md  check_indexes.py  main.py  pyproject.toml  requirements.txt  startup.py  test.py
.claude/: settings.local.json
routers/public/: rosters.py
routers/v1/: capital.py  clan.py  game_data.py  giveaway.py  global_data.py  internal.py  leaderboards.py  leagues.py  legends.py  list.py  player.py  ranking.py  redirect.py  rosters.py  server_info.py  stats.py  test.py  tickets.py  utility.py  war.py
routers/v2/: clan_settings.py  guilds.py  pl.py  tracking.py
routers/v2/accounts/: endpoints.py  utils.py
routers/v2/activity/: activity.py  activity_models.py  endpoints.py  models.py  utils.py
routers/v2/app/: app.py
routers/v2/auth/: auth.py  auth_models.py  auth_utils.py  endpoints.py  models.py  utils.py
routers/v2/bans/: ban_models.py  bans.py
routers/v2/ui/: ui.py
static/roster/: api-utils.js  automation.js  drag-drop.js  group-settings.js  groups-categories.js  main.js  member-display.js  member-search.js  roster-utils.js  settings.js
templates/: index.html  roster_management.html
templates/roster/: automation.html  categories.html  dashboard.html  group_settings.html  groups.html  members.html  settings.html  sidebar.html  styles.css  welcome.html
utils/: cache_decorator.py  config.py  custom_coc.py  database.py  discord_api.py  email_service.py  password_validator.py  security.py  security_middleware.py  sentry_utils.py  time.py  time_utils.py  utils.py
(+76 files in other folders)
